"Fix" 프로필 memberId 처리 방식 및 서비스 로직 수정